# python

./: .env.template  .gitignore  README.md  example_usage.py  install.sh  pyproject.toml  requirements.txt  setup.py  src.txt
caddy/: .gitignore  Caddyfile  Dockerfile  Makefile  README.md  ansible-requirements.yml  ansible_tests.yml  docker-compose.yml  generate-cloudflare-token.sh  install.sh  run_ansible_tests.sh  run_tests.sh
caddy-demo/: README.md
caddy-demo/1-caddyfile/: Caddyfile  Makefile  README.md  docker-compose.yml  setup.sh
caddy-demo/1-caddyfile/html/: index.html
caddy-demo/2-docker-labels/: Makefile  README.md  docker-compose.yml  setup.sh
caddy-demo/2-docker-labels/api/: Dockerfile  app.py
caddy-demo/2-docker-labels/web/: index.html
caddy/app/: main.py
caddy/tests/: requirements.yml  run_tests.sh  test.yml
caddy/tests/roles/test_caddy/tasks/: main.yml
caddy2/: .env.example  Caddyfile  Dockerfile.test  Makefile  README.md  ansible_tests.yml  docker-compose.yml  docker-compose.yml.bak  generate-certs.sh  requirements-ansible.txt  run_docker_tests.sh  run_tests.sh  test_services.yml
caddy2/scripts/: generate-certs.sh  setup.sh
caddy2/scripts/certs/: generate.sh  renew.sh
caddy2/scripts/services/: logs.sh  restart.sh  start.sh  stop.sh
caddy2/scripts/setup/: 01-setup.sh  02-configure.sh
caddy2/scripts/test/: healthcheck.sh  test-caddy.sh
caddy2/scripts/utils/: backup.sh  common.sh  update.sh
deploymat/: __init__.py  cli.py  cloudflare.py  config.py  core.py  deployment.py  generators.py  git.py  settings.py  shell.py  utils.py
deploymat/api/: server.py
